// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AIHub Component matches snapshot when closed 1`] = `
<DocumentFragment>
  <div
    class="w-full bg-slate-400 border-t border-gray-700"
  >
    <button
      aria-controls="ai-hub-menu"
      aria-expanded="false"
      class="flex items-center justify-between w-full px-4 py-2 text-left text-gray-600 hover:bg-gray-300 hover:text-gray-600 transition-colors duration-200"
    >
      <span
        class="flex items-center"
      >
        <svg
          class="lucide lucide-lightbulb mr-2"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
          />
          <path
            d="M9 18h6"
          />
          <path
            d="M10 22h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          AI Hub
        </span>
      </span>
      <svg
        aria-label="chevron-up"
        class="lucide lucide-chevron-up"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m18 15-6-6-6 6"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`AIHub Component matches snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="w-full bg-slate-300  border-t border-gray-700"
  >
    <button
      aria-controls="ai-hub-menu"
      aria-expanded="true"
      class="flex items-center justify-between w-full px-4 py-2 text-left text-gray-600 hover:bg-gray-300 hover:text-gray-600 transition-colors duration-200"
    >
      <span
        class="flex items-center"
      >
        <svg
          class="lucide lucide-lightbulb mr-2"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
          />
          <path
            d="M9 18h6"
          />
          <path
            d="M10 22h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          AI Hub
        </span>
      </span>
      <svg
        aria-label="chevron-down"
        class="lucide lucide-chevron-down"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      aria-labelledby="ai-hub-button"
      class="bg-slate-500 border-t border-gray-700"
      role="menu"
    >
      <a
        class="flex items-center justify-between px-4 py-2 text-sm text-gray-300 border-t border-gray-400 hover:bg-gray-600 transition-colors duration-200"
        href="#"
        role="menuitem"
      >
        Model List
      </a>
      <a
        class="flex items-center justify-between px-4 py-2 text-sm text-gray-300 border-t border-gray-400 hover:bg-gray-600 transition-colors duration-200"
        href="#"
        role="menuitem"
      >
        Prompt Templates
      </a>
    </div>
  </div>
</DocumentFragment>
`;
